--- a/aulas/aula01/gdrive-webapi/package.json
+++ b/aulas/aula01/gdrive-webapi/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "mkdir -p downloads && node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll  --runInBand",
     "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache --runInBand --coverage"
@@ -16,6 +16,7 @@
   "dependencies": {
     "pino": "^6.8.0",
     "pino-pretty": "^5.1.3",
+    "pretty-bytes": "5.6",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
