--- a/aulas/aula03/gdrive-webapi/package.json
+++ b/aulas/aula03/gdrive-webapi/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "mkdir -p downloads && node src/index.js",
+    "prod": "mkdir -p downloads && NODE_ENV=production node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll  --runInBand",
     "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache --runInBand --coverage"
@@ -23,5 +24,8 @@
   },
   "devDependencies": {
     "jest": "^27.1.0"
+  },
+  "engines": {
+    "node": "16"
   }
 }
